--- a/css/buttoms.css
+++ b/css/buttoms.css
@@ -26,8 +26,8 @@
   margin-right: 30%;
   margin-left: 34%;
   position: absolute;
-  margin-bottom: 15%;
-  margin-top: 300px;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 .btn-63:disabled {
   cursor: default;
