--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,14 @@ select {
 
 }
 
+.loader{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
